--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -1,5 +1,8 @@
 @use "../abstracts" as abs;
 .header{
+  position: absolute;
+  height: 8rem;
+  width: 100%;
   z-index: 2;
   grid-column: 1 / -1;
   display: flex;
