--- a/src/styles/layout/announcement.scss
+++ b/src/styles/layout/announcement.scss
@@ -1,6 +1,5 @@
 @use "../abstracts" as abs;
 .announcement {
-  height: 100%;
   grid-column: main-start / main-end;
   display: flex;
   flex-direction: column;
@@ -8,6 +7,7 @@
   justify-content: space-between;
   gap: 2rem;
   font-family: abs.$font-secondary;
+  margin-top: 10rem;
   & img{
     width: 100%;
     height: 25vh;
