--- a/src/styles/layout/features.scss
+++ b/src/styles/layout/features.scss
@@ -34,15 +34,12 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 12rem;
+    min-height: 13rem;
+    gap: 2rem;
     &-element{
       width: 100%;
       display: none;
       gap: 2rem;
-      & img{
-        width: 5rem;
-        height: 5rem;
-      }
     }
     &-element.active{
       display: flex;
