--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -4,7 +4,7 @@ $color-tertiary:#12D8FA;
 $color-dark:#262626;
 $color-white:#F1F5F9;
 
-$font-primary:'Open Sans', sans-serif;
+$font-primary:'Poppins', sans-serif;
 $font-secondary:'Rubik', sans-serif;
 $font-thin:400;
 $font-regular:500;
