--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -10,7 +10,7 @@
 html{
   font-size: 62.5%;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  scroll-behavior: smooth !important;
   scroll-padding: 12rem;
   &::-webkit-scrollbar {width: 1rem;}
   &::-webkit-scrollbar-track {background: rgba(abs.$color-dark,.95)}
