--- a/src/styles/layout/mobile-menu.scss
+++ b/src/styles/layout/mobile-menu.scss
@@ -5,9 +5,6 @@
   flex-direction: column;
   gap: .75rem;
   width: max-content;
-  position: absolute;
-  top: 2.5rem;
-  right: 2rem;
   z-index: 2;
   cursor: pointer;
   @media only screen and (min-width: abs.$bp-medium){
@@ -61,17 +58,22 @@
   width: 0;
 }
 
+.hamburger-menu-icon:has(input:checked) + .mobile-menu {
+  transform: translateX(0);
+}
+
 .mobile-menu{
   transition: transform 200ms ease-in-out;
   transform: translateX(100%);
-  padding-top: 10rem;
+  padding-top: 7.5rem;
   background-color: abs.$color-primary;
   color: abs.$color-white;
-  width: 100vw;
-  height: 100vh;
+  width: 75vw;
+  height: 175vh;
   position: absolute;
   top: 0;
-  left: 50%;
+  right: 0;
+  box-shadow: 0 0 2.5rem .5rem abs.$color-dark;
   @media only screen and (min-width: abs.$bp-medium){
     display: none;
   }
@@ -80,20 +82,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 3rem;
+    gap: 2.5rem;
     width: 100%;
   }
   &__link{
     width: 100%;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     color: abs.$color-white;
     text-decoration: none;
     text-transform: uppercase;
     font-family: abs.$font-secondary;
   }
-}
-
-.hamburger-menu-icon:has(input:checked) + .mobile-menu {
-  transform: translateX(-50%);
 }
