--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -74,7 +74,7 @@
       box-shadow: 0 0 .25rem .15rem abs.$color-dark;
     }
   }
-  &-panel{
+  &-panel-menu{
     width: 100%;
     border: none;
     background-color: transparent;
